# NouGenShards

./: .env.example  .gitattributes  .gitignore  .mcp.json  100_Elevation_Plan.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FLEET_ROSTER.md  GEMINI.md  GITHUB_GUIDE.md  HARDENING.md  LICENSE  LICENSE.md  NOTICE.md  ONBOARDING_PLAN.md  README.md  SECURITY.md  SOL_AI_PROVENANCE.md  app.py  autonomous_harden.py  dump_elevated.py  dump_memories_schema.py  dump_vault.py  fix_types.py  get_memories_schema.py  incremental_migration.py  incremental_migration_v2.py  list_backup_tables.py  list_tables.py  mcp.config.json  migrate_memories.py  migrate_vault.py  migrate_vault_v2.py  nougen.bat  package-lock.json  package.json  pyproject.toml  (+8 more)
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-space.yml
conductor/: plan.md
docs/: AUDIT_DEEP_DIVE.md  DEPLOY_SPACE.md  architecture.md  billing-boundaries.md  cloud-modes.md  commercial-use.md  handoffs.md  licensing.md  metamer-orchestration-playbook.md  privacy.md
docs/handoffs/: 2026-06-27_cloud-repo-session.md  2026-06-29_cloud-path-scrub.md
docs/provenance/: SOL-AI-PRIORITY.md
docs/theory/: clinical-handoffs.md  n-gram-topologies.md
drills/: README.md  adversary.md  compress.md  diag.md  fact.md  fork.md  patch.md  recall.md  receipt.md  review.md  triage.md
examples/: demo.py
pending_shards/: 2026-06-11_nougenshards_mcp_history_repair.md
src-tauri/: .gitignore  build-sidecar.ps1  tauri.conf.json
src-tauri/src/: lib.rs
src/nougen_shards/: a2a.py  (+32 more)
tests/: SHARD_HISTORY_PLAN.md  test_a2a.py  test_agents.py  test_ann_index.py  test_audit_fixes.py  test_auto_research.py  test_billing.py  test_brain_scan.py  test_capture_secret_guard.py  test_cli.py  test_cloud_edge_auth.py  test_cloud_integration.py  test_context_client.py  test_core_determinism.py  test_demo.py  test_dual_system.py  test_evolution_security.py  test_federation.py  test_federation_auto_embed.py  test_fts_or_fallback.py  test_gatekeeper.py  test_graph.py  test_griot.py  test_griot_eval.py  test_griot_heal.py  test_griot_verify.py  test_handoff.py  test_handoff_live_status.py  test_history_engine.py  test_ingest_junk_gate.py  test_keymaker_security.py  test_lane_health.py  test_mcp_endpoint.py  test_mmr_diversify.py  test_models_client.py  test_ngram.py  test_node_api.py  test_nougen_context.py  test_openrouter_mcp_client.py  test_openrouter_router.py  (+6 more)
tools/: arxiv_digest_day.py  arxiv_gap_backfill.py  arxiv_semantic_tagger.py  arxiv_status.py  arxiv_weekly_digest.py  atomize_handoffs.py  atomize_journal_shards.py  capture_doctrine.py  dream_deep.py  fleet_test.py  handoff_guard.py  hydrate_ctx_mode.py  ingest_journal_shards.py  ingest_pending_shard.py  ingest_provider_keys.py  install_rule_zero.py  lane_freshness.py  metameric_deep_sweep.py  metameric_longform.py  migrate_to_binary.py  migrate_watchtower_memory.py  nougenai_fleet_registry_mcp.py  read_vault_shards.py  recall_probe.py  replay_session_handoffs.sh  replay_session_shards.sh  scan_guard.py  shard_guard.py  substrate_summary.py
ts/: PORTING_CONVENTIONS.md  package.json  tsconfig.json
ui/: index.html
wargames/: arxiv-evolution.md  capture-secret-guard.md  dream-harder.md  fix-all-backfill-dream.md  fleet-roster.md  fts-or-fallback.md  ingest-junk-gate.md  ledger.md  migration-pipeline.md  nougen-beats-fable.md  nougenq-cf-deploy.md  nougenq-hud-conversion.md  nougenq-q-coordinator.md  nougenq-scaffold.md  nougenq-twitch-lane.md  open-engine-expansion.md  retrieval-quality.md  success.md
(+74 files in other folders)
