[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nougen_shards"
version = "1.1.0"
authors = [
  { name="Who Visions LLC", email="contact@whovisions.com" },
]
description = "Persistent local memory for coding agents. Store machine experience as shards."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Powered by :: NouGenAi (Who Visions LLC)",
]
dependencies = [
    # Lower bounds pin the major versions the code targets, keeping `pip install .`
    # reproducible without over-constraining patch/minor upgrades. See CHANGELOG.
    "mcp>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",       # connectors/sql.py uses the 2.0 API (make_url, text)
    "gradio>=4.0",
    "tqdm>=4.66",
    "rich>=13.0",
    "colorama>=0.4.6",
    "openai>=1.0",           # embeddings provider (text-embedding-3-small)
    "pydantic>=2.0",         # app.py models; mcp also requires pydantic v2
    "numpy>=1.24",           # imported in core.py; previously undeclared (broke `pip install .`)
]

[project.urls]
"Homepage" = "https://whovisions.com"
"Bug Tracker" = "https://github.com/whovisions/nougen/issues"

[project.scripts]
nougen = "nougen_shards.cli:main"
nougen-mcp = "nougen_shards.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Makes `python -m pytest` work from the repo root without the manual
# PYTHONPATH=src prefix (pytest>=7 injects these onto sys.path itself).
# "." lets tests import the root-level app.py (the Space node).
pythonpath = ["src", "."]
testpaths = ["tests"]
